Fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Geo&display=swap');
 
 /* GENERAL 
 =========================================================================
@@ -12,8 +11,7 @@ html {
 body {
   margin: 0;
   background-color: #1C1C1C;
-  font-family: 'Geo';
-  font-size: 24px;
+  font-family: 'Roboto Mono';
   padding: 1rem;
   max-width: 768px;
   margin: auto;
@@ -48,6 +46,12 @@ hr {
 
 h1 {
   padding: 3rem 0 2rem 0;
+}
+
+@media screen and (max-width: 600px) {
+  h1 {
+  padding: 0rem 0 2rem 0;
+  }
 }
 
 h2, h3, h4, h5, h6 {
@@ -226,7 +230,7 @@ h2, h3, h4, h5, h6 {
   z-index: -1;
 }
 
-@media screen and (max-height: 480px) {
+@media screen and (max-height: 600px) {
   #hero-div {
     max-width: unset;
     position: unset;
